# types/gen/go/transport/v1/transport.pb.validate.go
@@ -2108,6 +2108,8 @@ func (m *Request_Data_Data_Props) validate(all bool) error {
 		}
 	}
 
+	// no validation rules for IntegrationsCallbackUrl
+
 	if len(errors) > 0 {
 		return Request_Data_Data_PropsMultiError(errors)
 	}
